
include_HEADERS = \
	bintree.h \
	bitfield3d.h \
	mrc.h \
	mrc_bits.h \
	mrc_common.h \
	mrc_crds.h \
	mrc_ddc.h \
	mrc_ddc_private.h \
	mrc_domain.h \
	mrc_domain_dynamic.h \
	mrc_domain_private.h \
	mrc_fld.h \
	mrc_fortran.h \
	mrc_io.h \
	mrc_io_private.h \
	mrc_list.h \
	mrc_mod.h \
	mrc_nr.h \
	mrc_obj.h \
	mrc_params.h \
	mrc_profile.h \
	mrc_profile_nop.h \
	mrc_ts.h \
	mrc_ts_monitor.h \
	mrc_ts_monitor_private.h \
	mrc_ts_private.h \
	mrc_block_factory.h \
	mrc_block_factory_private.h \
	mrc_trafo.h \
	mrc_trafo_cartesian.h \
	mrc_trafo_cylindrical.h \
	mrc_trafo_curvilin.h \
	mrc_trafo_fast.h \
	mrc_mat.h \
	mrc_vec.h \
	mrc_vec_private.h \
	mrctest.h
