
include_HEADERS = \
	ggcm_mhd_bnd.h \
	ggcm_mhd_bnd_private.h \
	ggcm_mhd_bndsw.h \
	ggcm_mhd_bndsw_private.h \
	ggcm_mhd_crds_gen.h \
	ggcm_mhd_crds_gen_private.h \
	ggcm_mhd_crds.h \
	ggcm_mhd_crds_private.h \
	ggcm_mhd_defs_extra.h \
	ggcm_mhd_defs.h \
	ggcm_mhd_diag.h \
	ggcm_mhd_diag_item.h \
	ggcm_mhd_diag_item_private.h \
	ggcm_mhd_diag_private.h	\
	ggcm_mhd_gkeyll.h \
	ggcm_mhd.h \
	ggcm_mhd_ic_gkeyll_lua.h \
	ggcm_mhd_ic.h \
	ggcm_mhd_ic_private.h \
	ggcm_mhd_private.h \
	ggcm_mhd_step_cweno_private.h \
	ggcm_mhd_step_gkeyll_lua.h \
	ggcm_mhd_step.h \
	ggcm_mhd_step_private.h
