
AM_CPPFLAGS = -I$(srcdir)/../../include -I$(srcdir)/../include

noinst_LTLIBRARIES = libmhd.la

libmhd_la_SOURCES = \
	ggcm_mhd_register.c \
	\
	ggcm_mhd.c \
	ggcm_mhd_box.c \
	ggcm_mhd_convert.c \
	\
	ggcm_mhd_bnd.c \
	ggcm_mhd_bnd_none.c \
	ggcm_mhd_bnd_conducting.c \
	ggcm_mhd_bnd_conducting_x.c \
	ggcm_mhd_bnd_open_x.c \
	\
	ggcm_mhd_crds.c \
	ggcm_mhd_crds_c.c \
	\
	ggcm_mhd_crds_gen.c \
	ggcm_mhd_crds_gen_mrc.c \
	ggcm_mhd_crds_gen_c.c \
	\
	ggcm_mhd_diag.c \
	\
	ggcm_mhd_diag_item.c \
	ggcm_mhd_diag_item_state.c \
	ggcm_mhd_diag_item_primitive.c \
	primvar.c \
	primbb.c \
	zmaskn.c \
	ggcm_mhd_diag_item_divb.c \
	ggcm_mhd_diag_item_j.c \
	calc_currcc.c \
	calc_divb.c \
	\
	ggcm_mhd_ic.c \
	\
	ggcm_mhd_step.c \
	ggcm_mhd_get_fields.c \
	calc_neg_divg.c \
	calc_fluxes_per_face.c \
	calc_u_delta.c \
	calc_u_pm.c \
	calc_KNP_fluxes.c \
	calc_cweno_fluxes.c \
	calc_ct_rhs.c \
	calc_semiconsv_rhs.c \
	ggcm_mhd_fill_ghost_fld.c \
	ggcm_mhd_get_fields.c \
	ggcm_mhd_step_cweno.c \
	ggcm_mhd_step_c.c \
	\
	mrc_ts_monitor_ggcm.c \
	\
	mrc_fld_mhd_fc_float.c


